variables.RunFour.scala.error
Compilation error:
RunFour:1: error: not found: value nbBiscuit
nbBiscuit=0
^RunFour:2: error: not found: value nbBiscuit
while(nbBiscuit != 4){
      ^RunFour:6: error: not found: value nbBiscuit
  nbBiscuit = nbBiscuit+1
  ^