variables.RunFour.scala.code
nbBiscuit=0
while(nbBiscuit != 4){
  while(!estSurBiscuit){
    avance()
  }
  nbBiscuit = nbBiscuit+1
}
